[Remove] 불필요한 test code 파일 삭제