@@ -39,6 +39,7 @@ import org.springframework.data.domain.SliceImpl;
 
 import java.time.LocalDateTime;
 import java.time.ZoneOffset;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -116,11 +117,13 @@ class ChatRoomFacadeServiceImplTest {
 
         when(chatRoomQueryService.getRoomOrThrow(roomId)).thenReturn(room);
         when(chatMetadataRedisService.getLatestMessageId(roomId, 30L)).thenReturn(30L);
-        when(chatMessageService.getEnterMessagesByCursor(eq(roomId), eq(viewerId), eq(100), isNull())).thenReturn(slice);
-        when(chatRoomMemberService.getRoomMemberIdsByRoomId(roomId)).thenReturn(List.of(1L, 2L, viewerId));
-        when(chatMetadataRedisService.getAllMembersLastReadId(roomId, List.of(1L, 2L, viewerId)))
+        when(chatMessageService.getEnterMessagesByCursor(eq(roomId), eq(viewerId), eq(100), isNull()))
+                .thenReturn(slice);
+        when(chatRoomMemberService.getRoomMemberIdsByRoomId(roomId))
+                .thenReturn(List.of(1L, 2L, viewerId));
+        when(chatMetadataRedisService.getAllMembersLastReadId(eq(roomId), anyList()))
                 .thenReturn(new java.util.HashMap<>(Map.of(1L, 10L, 2L, 5L)));
-        when(userDisplayNameService.resolveDisplayNamesBulk(viewerId, List.of(2L, 1L)))
+        when(userDisplayNameService.resolveDisplayNamesBulk(eq(viewerId), anyList()))
                 .thenReturn(Map.of(1L, "친구별칭1"));
         when(chatRoomDisplayResolver.resolveTitle(roomId, viewerId, room)).thenReturn("화면 제목");
         when(chatListService.getMuted(roomId, viewerId)).thenReturn(true);
@@ -231,7 +234,7 @@ class ChatRoomFacadeServiceImplTest {
         Long requesterId = 1L;
         CreateGroupChatRoomRequest request = new CreateGroupChatRoomRequest(
                 "  새 그룹방  ",
-                List.of(" uuid-2 ", "uuid-3", "uuid-2", "my-uuid", " ", null)
+                Arrays.asList(" uuid-2 ", "uuid-3", "uuid-2", "my-uuid", " ", null)
         );
         ChatRoom room = chatRoom(200L, RoomType.GROUP, "새 그룹방", null);
         ChatListItemResponse item1 = new ChatListItemResponse(200L, "me", 0, "", null, null);
@@ -287,22 +290,55 @@ class ChatRoomFacadeServiceImplTest {
         Long roomId = 300L;
         Long userId = 1L;
         ChatRoom room = chatRoom(roomId, RoomType.GROUP, "room", 30L);
+
         LocalDateTime sameTime = LocalDateTime.of(2026, 6, 11, 12, 0);
-        ChatMessageItemResponse id20 = messageItem(20L, "c20", 2L, "u2", "sender2", "TEXT", "m20", sameTime, 0);
-        ChatMessageItemResponse id10 = messageItem(10L, "c10", 3L, "u3", "sender3", "TEXT", "m10", sameTime, 0);
+
+        ChatMessageItemResponse id20 = messageItem(
+                20L,
+                "c20",
+                2L,
+                "u2",
+                "sender2",
+                "TEXT",
+                "m20",
+                sameTime,
+                0
+        );
+
+        ChatMessageItemResponse id10 = messageItem(
+                10L,
+                "c10",
+                3L,
+                "u3",
+                "sender3",
+                "TEXT",
+                "m10",
+                sameTime,
+                0
+        );
+
         when(chatRoomQueryService.getRoomOrThrow(roomId)).thenReturn(room);
+
         when(chatMessageService.getMessagesAfter(roomId, 5L, 100))
                 .thenReturn(new SliceImpl<>(List.of(id20, id10), PageRequest.of(0, 100), false));
-        when(userDisplayNameService.resolveDisplayNamesBulk(userId, List.of(2L, 3L)))
+
+        when(userDisplayNameService.resolveDisplayNamesBulk(eq(userId), anyList()))
                 .thenReturn(Map.of(2L, "별칭2"));
 
         ChatMessageCatchUpResponse response = target.getMessagesAfter(roomId, userId, 5L, 999);
 
         verify(chatRoomQueryService).validateMemberOrThrow(roomId, userId);
         verify(chatMessageService).getMessagesAfter(roomId, 5L, 100);
+        verify(userDisplayNameService).resolveDisplayNamesBulk(eq(userId), anyList());
+
         assertThat(response.roomId()).isEqualTo(roomId);
-        assertThat(response.messages()).extracting(ChatMessageResponse::messageId).containsExactly(10L, 20L);
-        assertThat(response.messages().get(1).sender().senderNickname()).isEqualTo("별칭2");
+        assertThat(response.messages())
+                .extracting(ChatMessageResponse::messageId)
+                .containsExactly(10L, 20L);
+
+        assertThat(response.messages().get(1).sender().senderNickname())
+                .isEqualTo("별칭2");
+
         assertThat(response.hasMore()).isFalse();
         assertThat(response.lastMessageId()).isEqualTo(20L);
     }
